--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,1 +1,5 @@
 <h1>Showing article <%= @article.title %></h1>
+<h2> Body: <%= @article.description %></h2>
+
+<%= link_to "Edit", edit_article_path(@article) %> |
+<%= link_to "Back", articles_path %>
