--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,4 @@
-<h1>New article</h1>
-
-<%= render 'form' %>
-
-<br>
-<%= link_to "Back", articles_path %>
+<div id="page-content">
+  <h1 class="text-center mt-4">Create a new article</h1>
+  <%= render 'form' %>
+</div>
