--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,8 @@
-<h1>Showing article <%= @article.title %></h1>
-<h2> Body: <%= @article.description %></h2>
+<h1>Showing article details</h1>
 
-<%= link_to "Edit", edit_article_path(@article) %> |
-<%= link_to "Back", articles_path %>
+<p><strong>Title: </strong><%= @article.title %></p>
+<p><strong>Description: </strong><%= @article.description %></p>
+
+<%= link_to 'Edit', edit_article_path(@article) %> |
+<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %> |
+<%= link_to 'Return to articles listing', articles_path %>
