--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,17 +1,9 @@
 <div class="container">
-  <% if @article.errors.any? %>
-    <h2>The following errors prevented the article from being saved</h2>
-    <ul>
-      <% @article.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-    </ul>
-  <% end %>
-
   <div class="row justify-content-center">
     <div class="col-10">
-      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info rounded", local: true) do |f| %>
-        <div class="form-group row">
+      <%= render 'shared/errors' %>
+      <%= form_with(model: @article, class: "shadow p-3 mb-3 bg-info bg-opacity-50 rounded", local: true) do |f| %>
+        <div class="form-group row mb-3">
           <%= f.label :title, class: "col-2 col-form-label text-light" %>
           <div class="col-10">
             <%= f.text_field :title, class: "form-control shadow rounded", placeholder: "Title of article" %>
@@ -25,11 +17,12 @@
           </div>
         </div>
 
-        <div class="form-group row justify-content-center">
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-3">
           <%= f.submit class: "btn btn-outline-light btn-lg" %>
         </div>
       <% end %>
     </div>
-    <%= link_to '[ Cancel and return to articles listing ]', articles_path, class: "text-info" %>
+
   </div>
+  <%= link_to 'Back', articles_path, class: "text-white btn btn-secondary d-inline-block mb-3" %>
 </div>
