--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
+<div id="page-content">
   <div class="container" id="home-container">
     <div class="p-5 mb-4 bg-light rounded-3 jumbo text-white">
       <div class="container-fluid py-5">
@@ -7,3 +8,4 @@
       </div>
     </div>
   </div>
+</div>
