--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -25,7 +25,7 @@
         </div>
 
         <div class="d-grid gap-2 d-md-flex justify-content-md-end mt-3">
-          <%= f.submit 'Sign up', class: "btn btn-outline-light btn-lg" %>
+          <%= f.submit(@user.new_record? ? 'Sign up' : 'Update account', class: "btn btn-outline-light btn-lg") %>
         </div>
       <% end %>
     </div>
