--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,7 +4,7 @@
   <%= will_paginate @articles, :container => false %>
 </div>
 
-<%= render 'article' %>
+<%= render 'article', obj: @articles %>
 
 <div class="flickr_pagination mb-3">
   <%= will_paginate @articles, :container => false %>
