--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,19 @@
 <h1 class="text-center mt-4"><%= @category.name %></h1>
+
+<% if logged_in? && current_user.admin? %>
+  <div class="text-center mt-4">
+    <%= link_to "Edit category name", edit_category_path(@category), class: "btn btn-outline-info" %>
+  </div>
+<% end %>
+
+<h3 class="text-center mt-4">Categories</h3>
+
+<div class="flickr_pagination">
+  <%= will_paginate @category_articles, :container => false %>
+</div>
+
+<%= render 'articles/article', obj: @category_articles %>
+
+<div class="flickr_pagination mb-3">
+  <%= will_paginate @category_articles, :container => false %>
+</div>
