add edit category page for admin

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -17,5 +17,5 @@
     </div>
 
   </div>
-  <%= link_to 'Back', articles_path, class: "text-white btn btn-secondary d-inline-block mb-3" %>
+  <%= link_to 'Back', categories_path, class: "text-white btn btn-secondary d-inline-block mb-3" %>
 </div>
