--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,2 +1,10 @@
 <h1 class="text-center mt-4">Create a new category</h1>
-<%= render 'form' %>
+
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-10">
+      <%= render 'form' %>
+    </div>
+  </div>
+  <%= link_to 'Back', categories_path, class: "text-white btn btn-secondary d-inline-block mb-3" %>
+</div>
